fix(styles): [PLAN-218] fix layout + setCollapseEmptyDiv for ad

--- a/src/components/FlightInfo/LastUpdateCard/lastUpdateCard.module.css
+++ b/src/components/FlightInfo/LastUpdateCard/lastUpdateCard.module.css
@@ -2,7 +2,6 @@
     box-shadow: var(--info-box-container-shadow);
     border-radius: 1.5rem;
     background: var(--color-white);
-    margin-bottom: 1.5rem;
     margin-right: .8rem;
     margin-left: .8rem;
 }
